# cocktail-mate-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  DEPLOY.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.db.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  deploy.yml  format.yml  gitleaks.yml  terraform.yml
app/: __init__.py  main.py
app/auth/: cookies.py  dependencies.py  mail.py  nickname.py  repository.py  router.py  schemas.py  service.py
app/cocktail/: mock.py  models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  csrf.py  database.py  db_settings.py  rate_limit.py  security.py  storage.py
app/explore/: repository.py  router.py  schemas.py  service.py
app/favor/: repository.py  router.py  schemas.py  service.py
app/like/: models.py  repository.py  router.py  schemas.py  service.py
app/recommend/: repository.py  router.py  schemas.py  service.py
app/user/: models.py  repository.py  (+3 more)
caddy/: Dockerfile
docs/: CLOUDFLARE.md  ONBOARDING.md  monorepo-cicd-runbook.md
scripts/: check-ssh.sh  harden-server.sh
tests/: conftest.py  test_auth_email.py  test_autocomplete.py  test_cookies_csrf.py  test_kakao.py  test_like_and_cocktail.py  test_mail.py  test_normalize.py  test_password_policy.py  test_password_reset_change.py  test_rate_limit.py
(+48 files in other folders)
