[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocktail-mate-server"
version = "0.1.0"
description = "Cocktail Mate backend API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
# defaults (Black-compatible)
